[package]
name        = "enigma_machine"
version     = "0.1.0"
authors     = ["atsushi130 <atsushi_main@outlook.jp>"]
license     = "MIT"
description = "This crate is Enigma Machine corresponding to various character strings."
readme      = "README.md"
repository  = "https://github.com/takatori/rawst"
keywords    = ["enigma", "cipher", "encrypt", "decrypt"]

[dependencies]
lazy_static     = "0.2.8"
rustc-serialize = "0.3.24"

[lib]
name = "enigma_machine"
path = "./src/lib.rs"
