[package]
name        = "enigma_machine"
version     = "0.1.2"
authors     = ["atsushi130 <atsushi_main@outlook.jp>"]
license     = "MIT"
description = "This crate is Enigma Machine corresponding to various character strings."
readme      = "README.md"
repository  = "https://github.com/atsushi130/EnigmaMachine/"
keywords    = ["enigma", "cipher", "encrypt", "decrypt"]

[dependencies]
lazy_static = "0.2.8"
base64      = "~0.5.0"

[lib]
name = "enigma_machine"
path = "./src/lib.rs"
